@@ -92,16 +92,13 @@ There are also <a href="/home.html#ContactInfo">other ways to contact</a>
 the FSF.
 <br />
 Please send broken links and other corrections (or suggestions) to
-<a href="mailto:webmasters@gnu.org"><em>webmasters@gnu.org</em></a>.
+<a href="mailto:%%EMAIL%%"><em>%%EMAIL%%</em></a>.
 </p>
 
-<p>
-Copyright &copy; 2007 Free Software Foundation, Inc.,
-51 Franklin Street, Fifth Floor, Boston, MA 02111, USA
-<br />
-Verbatim copying and distribution of this entire article is
-permitted in any medium, provided this notice is preserved.
-</p>
+<p>Copyright &copy; 2009 Free Software Foundation, Inc.</p>
+
+<p>Verbatim copying and distribution of this entire article is
+permitted in any medium, provided this notice is preserved.</p>
 
 </div>
 
